cif/org.eclipse.escet.cif.tests/tests/checks/SvgInNoUpdatesCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -----------------------------------------------
  (1/1) SVG input mapping does not have an event.
  -----------------------------------------------
   * In the top-level scope of the specification:
     - svgin id "abc" do i := true;
       ^
